service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oppimisalusta-image-2
  labels:
    app: oppimisalusta-image-2
spec:
  selector:
    deployment: oppimisalusta-image-2
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: dev
      protocol: TCP
      port: 5173
      targetPort: 5173
  type: ClusterIP
